--- a/pika-refind-theme/usr/share/pika-refind/theme/refind-dark/refind-dark.conf
+++ b/pika-refind-theme/usr/share/pika-refind/theme/refind-dark/refind-dark.conf
@@ -14,11 +14,11 @@ banner refind-dark/banners/bg.png
 #timeout -1
 
 #Display, customize according to your display
-resolution 3440 1440
+#resolution 3440 1440
 
 #Graphics
 use_graphics_for linux,grub,osx,windows
 
 #UI
-showtools shell, memtest, gdisk, firmware, hidden_tags, reboot, shutdown, exit
+#showtools shell, memtest, gdisk, firmware, hidden_tags, reboot, shutdown, exit
 
